# maya-subtitler

./: .gitignore  LICENSE  README.md  README_JP.md  README_MAYA.md  README_MAYA_JP.md  maya_subtitler.mod  pyproject.toml
plug-ins/: subtitleLocator.py
scripts/: AEsubtitleLocatorTemplate.mel
scripts/maya_subtitler/: __init__.py  command.py  ui.py
subtitler/: __init__.py  cli.py  gui.py  romanize.py  srt.py  transcribe.py
