[project]
name = "maya-subtitler"
version = "0.1.0"
description = "Audio transcription and subtitle generation tool for Maya"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-whisper",
    "pykakasi",
    "PySide6",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
subtitler = "subtitler.cli:main"
subtitler-gui = "subtitler.gui:main"
